--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Neuer Ordner (7).loader.js";
+      var loaderUrl = buildUrl + "/HLG.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Neuer Ordner (7).data.br",
-        frameworkUrl: buildUrl + "/Neuer Ordner (7).framework.js.br",
-        codeUrl: buildUrl + "/Neuer Ordner (7).wasm.br",
+        dataUrl: buildUrl + "/HLG.data.gz",
+        frameworkUrl: buildUrl + "/HLG.framework.js.gz",
+        codeUrl: buildUrl + "/HLG.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "HealthLiteracyGame_",
